# SandeshWAP

./: .gitignore  .replit  ENTERPRISE_PERFORMANCE_VALIDATION_REPORT.md  ai_websocket_results_20250912_074838.txt  ai_websocket_test.sh  components.json  package-lock.json  package.json  performance_results_20250912_074414.txt  performance_test_v2.sh  performance_validation.sh  pyproject.toml  quick_perf_results_20250912_074215.json  quick_performance_test.sh  replit.md  simple_perf_results_20250912_074514.txt  simple_performance_test.sh  tsconfig.json
attached_assets/: README_1757560416666.md  (+12 more)
projects/proj_fastapi/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  stress_test.py  test_comprehensive.py  test_final_validation.py
projects/proj_fastapi/.github/workflows/: ci.yml
projects/proj_fastapi/alembic/: env.py
projects/proj_fastapi/alembic/versions/: 001_2024_09_11_1200-initial_migration_with_user_model.py
projects/proj_fastapi/app/: __init__.py  main.py
projects/proj_fastapi/app/api/: __init__.py  auth.py  deps.py  users.py  websocket.py
projects/proj_fastapi/app/core/: auth.py  config.py  database.py  db.py  observability.py  redis.py  security.py
projects/proj_fastapi/app/models/: __init__.py  user.py
projects/proj_fastapi/app/routers/: auth.py  health.py  realtime.py  users.py
projects/proj_fastapi/app/schemas/: __init__.py  auth.py  user.py
projects/proj_fastapi/scripts/: dev.sh  migrate.py  run.py
projects/proj_fastapi/tests/: __init__.py  conftest.py  test_auth.py  test_users.py  test_websocket.py
(+77 files in other folders)
