[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-logging>=0.58b0",
    "opentelemetry-instrumentation-redis>=0.58b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.58b0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
]
